charts/.helmwave/manifest/frontend@somens.yml
---
# Source: backend/templates/service.yaml
apiVersion: v1
kind: Service  
metadata:
  name: fnt-svc
  namespace: somens
spec:
  ports:
  - port: 8088
    targetPort: 80    
  selector:    
    app: fnt-deploy
---
# Source: backend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: fnt-deploy
  namespace: somens
spec:
  replicas: 1  
  selector:
    matchLabels:      
      app: fnt-deploy
  template:
    metadata:
      labels:        
        app: fnt-deploy
    spec:
      serviceAccountName: m-service-account 
      containers:
        - name: fnt-cnt
          image: 637423489195.dkr.ecr.eu-north-1.amazonaws.com/client-repo:8080e05742b8fd2182257015cd662f8ee9bb8601
          ports:
            - containerPort: 80    
---
# Source: backend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fnt-ingress
  namespace: somens
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: "ImplementationSpecific"  
            backend:
              service:
                name: fnt-svc
                port:
                  number: 8088
